@startuml
title Advantis Dental Surgeries (ADS) - Entity Relationship Diagram
note top : Lab 05A - CS489 Applied Software Development\nStudent: Mohamed

entity Dentists {
  dentist_id : INTEGER
  first_name : TEXT
  last_name : TEXT
  contact_phone : TEXT
  email : TEXT
  specialization : TEXT
  created_date : DATETIME
}

entity Patients {
  patient_id : INTEGER
  first_name : TEXT
  last_name : TEXT
  contact_phone : TEXT
  email : TEXT
  mailing_address : TEXT
  date_of_birth : DATE
  created_date : DATETIME
}

entity Surgeries {
  surgery_id : INTEGER
  surgery_name : TEXT
  location_address : TEXT
  telephone : TEXT
  created_date : DATETIME
}

entity Appointments {
  appointment_id : INTEGER
  dentist_id : INTEGER
  patient_id : INTEGER
  surgery_id : INTEGER
  appointment_date : DATE
  appointment_time : TIME
  status : TEXT
  notes : TEXT
  created_date : DATETIME
}

entity Bills {
  bill_id : INTEGER
  patient_id : INTEGER
  appointment_id : INTEGER
  amount : DECIMAL
  bill_date : DATE
  due_date : DATE
  status : TEXT
  description : TEXT
  created_date : DATETIME
}

Dentists ||--o{ Appointments
Patients ||--o{ Appointments
Surgeries ||--o{ Appointments
Patients ||--o{ Bills
Appointments ||--o{ Bills

@enduml
